# XOR-Errors

./: Cargo.toml  README.md
src/: lib.rs
