[package]
name = "xor-errors"
version = "0.1.0"
authors = ["XOR·APPS <developers@xorapps.cloud>"]
edition = "2021"
description = "A list of errors used by the XOR·APPS ecosystem of libraries and binaries with some reimplemetations from various crates to support ordering of errors where necessary"
keywords = ["XOR·APPS"]
categories = []
documentation = "https://docs.rs/xor-errors"
repository = "https://github.com/xorapps/xor-errors.git"
homepage = "https://xorapps.cloud/libraries/xor-errors"
readme = "README.md"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.21.0", optional = true }
camino = "1.1.2"
futures-lite = { version = "1.12.0", optional = true }
hex = { version = "0.4.3", optional = true }
lz4_flex = { version = "0.10.0", optional = true }
smol = { version = "1.3.0", optional = true }
tokio = { version = "1.25.0", features = ["full"], optional = true }
z85 = { version = "3.0.5", optional = true }

[features]
default = ["hex", "smol"]

hex = ["dep:hex"]
base64 = ["dep:base64"]
lz4 = ["dep:lz4_flex"]
smol = ["dep:smol", "dep:futures-lite"]
z85 = ["dep:z85"]
full_smol = ["hex", "base64", "lz4", "smol", "z85"]
full_tokio = ["hex", "base64", "lz4", "tokio", "z85"]
